--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.DatabaseLokal"
         tools:targetApi="31">
         <activity
-            android:name=".AddHomework"
+            android:name=".AddHomeworkActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
